@@ -591,62 +591,3 @@ def merge_as_sets(*args):
     return l
 
 mergeAsSets = function_deprecated_by(merge_as_sets)
-
-def test():
-    # Version
-    for (cls1, cls2) in [(AptPkgVersion, AptPkgVersion),
-                         (AptPkgVersion, NativeVersion),
-                         (NativeVersion, AptPkgVersion),
-                         (NativeVersion, NativeVersion),
-                         (str, AptPkgVersion), (AptPkgVersion, str),
-                         (str, NativeVersion), (NativeVersion, str)]:
-        assert cls1('0') < cls2('a')
-        assert cls1('1.0') < cls2('1.1')
-        assert cls1('1.2') < cls2('1.11')
-        assert cls1('1.0-0.1') < cls2('1.1')
-        assert cls1('1.0-0.1') < cls2('1.0-1')
-        assert cls1('1.0') == cls2('1.0')
-        assert cls1('1.0-0.1') == cls2('1.0-0.1')
-        assert cls1('1:1.0-0.1') == cls2('1:1.0-0.1')
-        assert cls1('1:1.0') == cls2('1:1.0')
-        assert cls1('1.0-0.1') < cls2('1.0-1')
-        assert cls1('1.0final-5sarge1') > cls2('1.0final-5') \
-               > cls2('1.0a7-2')
-        assert cls1('0.9.2-5') < cls2('0.9.2+cvs.1.0.dev.2004.07.28-1.5')
-        assert cls1('1:500') < cls2('1:5000')
-        assert cls1('100:500') > cls2('11:5000')
-        assert cls1('1.0.4-2') > cls2('1.0pre7-2')
-        assert cls1('1.5~rc1') < cls2('1.5')
-        assert cls1('1.5~rc1') < cls2('1.5+b1')
-        assert cls1('1.5~rc1') < cls2('1.5~rc2')
-        assert cls1('1.5~rc1') > cls2('1.5~dev0')
-
-    # Release
-    assert intern_release('sarge') < intern_release('etch')
-
-    # PackageFile
-    # for p in PackageFile('../../data/packages/sarge/Sources'):
-    #     assert p[0][0] == 'Package'
-    # for p in PackageFile('../../data/packages/sarge/Packages.i386'):
-    #     assert p[0][0] == 'Package'
-
-    # Helper routines
-    assert read_lines_sha1([]) == 'da39a3ee5e6b4b0d3255bfef95601890afd80709'
-    assert read_lines_sha1(['1\n', '23\n']) \
-           == '14293c9bd646a15dc656eaf8fba95124020dfada'
-
-    file_a = map(lambda x: "%d\n" % x, range(1, 18))
-    file_b = ['0\n', '1\n', '<2>\n', '<3>\n', '4\n', '5\n', '7\n', '8\n',
-              '11\n', '12\n', '<13>\n', '14\n', '15\n', 'A\n', 'B\n', 'C\n',
-              '16\n', '17\n',]
-    patch = ['15a\n', 'A\n', 'B\n', 'C\n', '.\n', '13c\n', '<13>\n', '.\n',
-             '9,10d\n', '6d\n', '2,3c\n', '<2>\n', '<3>\n', '.\n', '0a\n',
-             '0\n', '.\n']
-    patch_lines(file_a, patches_from_ed_script(patch))
-    assert ''.join(file_b) == ''.join(file_a)
-
-    assert len(merge_as_sets([])) == 0
-    assert ''.join(merge_as_sets("abc", "cb")) == "abc"
-
-if __name__ == "__main__":
-    test()
